--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -8,14 +8,35 @@
 <img src="/assets/images/istockphoto-1496720432-2048x2048.jpg" id="serviceImg2" alt="">
 
 <h6 id="service1WiHealthh5"><b>Are you a patient of WiHealth?</b></h6>
-<p>
-    At WiHealth your health is our priority. We ensure that our patients receive the best care and also 
-    have the feeling of being well taken care of being in a community that cares about your welbeing. 
+<p >
+    At WiHealth your health is our priority. We ensure that our patients 
+    receive the best care and also have the feeling of being well taken
+     care of being in a community that cares about your welbeing.The purpose 
+    of this platform is for sending appointments to the Wihealth Health practice.
 </p>
 
 
 <h5 id="service1WiHealthh6"><b>Busy Days?</b></h5>
-<img src="" alt="">
+<img src="/assets/images/istockphoto-157423321-612x612.jpg"  id="serviceImg3"  alt="">
+<p style="margin-top: 9rem; ">
+    Too busy to remember your appointments? We will send you a
+    reminder of your appointment for the Wihealth Health practice.
+</p>
 
 
+<h5 id="service1WiHealthh7">
+    <b>Healthcare is a journey?</b> <br>
+    <b>Let us help you on your journey.</b>
+</h5>
 
+
+<div id="homeFooter">
+   <img src="/assets/images/Screenshot_13-5-2024_121716_unsplash.com.jpeg" id="instagram_img" alt="">
+   <img src="/assets/images/Screenshot_13-5-2024_124041_www.istockphoto.com.jpeg" id="facebook_img" alt=""> 
+
+   <p style="color: white; margin-left: 3rem;">
+    5 Highstreet Blackriver <br>
+    St.Elizabeth
+
+   </p>
+</div>
