new commit for mobile screen

--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -1,1 +1,40 @@
-<p>contact-us works!</p>
+<img src="/assets/images/istockphoto-1641891514-170667a.webp" id="contactPageHero" alt="">
+
+<h5 id="contactPageH51">Where are we located?  </h5>
+
+<div class="container">
+    <div class="contact-info">
+        <b>WiHealth is located at:</b> <br>
+        123 Main Street <br>
+        Black River, St. Elizabeth <br>
+        Jamaica
+    </div>
+</div>
+
+
+<h5 id="contactPageH51">How can you reach us?</h5>
+
+<div class="container">
+    <div class="contact-info">
+    <b> WiHealth can be contact  at: </b><br>
+        Phone1: +18768485063 <br>
+        Phone2: +18763872109 <br>
+        Phone3: +18768902134 <br>
+        Phone2: +18767632900 <br>
+        email1:wihealth@gmail.com <br>
+        email2:wihealth@hotmail.com <br>
+        
+    </div>
+</div>
+
+<div id="homeFooter">
+    <img src="/assets/images/Screenshot_13-5-2024_121716_unsplash.com.jpeg" id="instagram_img" alt="">
+    <img src="/assets/images/Screenshot_13-5-2024_124041_www.istockphoto.com.jpeg" id="facebook_img" alt=""> 
+ 
+    <p style="color: white; margin-left: 3rem;">
+     123 Main Street
+     Black River, St. Elizabeth
+     Jamaica
+ 
+    </p>
+ </div>
