--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -13,7 +13,7 @@
     receive the best care and also have the feeling of being well taken
      care of being in a community that cares about your welbeing.The purpose 
     of this platform is for sending appointments to the Wihealth Health practice.
-</p>
+</p> 
 
 
 <h5 id="service1WiHealthh6"><b>Busy Days?</b></h5>
@@ -21,13 +21,15 @@
 <p style="margin-top: 9rem; ">
     Too busy to remember your appointments? We will send you a
     reminder of your appointment for the Wihealth Health practice.
-</p>
+</p> <br><br>
 
 
 <h5 id="service1WiHealthh7">
     <b>Healthcare is a journey?</b> <br>
     <b>Let us help you on your journey.</b>
-</h5>
+</h5> <br><br>
+
+<button class="btn btn-primary" id="getStartedMobile">Get Started</button> <br>
 
 
 <div id="homeFooter">
@@ -35,8 +37,9 @@
    <img src="/assets/images/Screenshot_13-5-2024_124041_www.istockphoto.com.jpeg" id="facebook_img" alt=""> 
 
    <p style="color: white; margin-left: 3rem;">
-    5 Highstreet Blackriver <br>
-    St.Elizabeth
+    123 Main Street
+    Black River, St. Elizabeth
+    Jamaica
 
    </p>
 </div>
