my commit with adjustments to the handburger menu

--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -16,7 +16,7 @@
 
 <div class="container">
     <div class="contact-info">
-    <b> WiHealth can be contact  at: </b><br>
+     <b > WiHealth can be contacted at: </b><br>
         Phone1: +18768485063 <br>
         Phone2: +18763872109 <br>
         Phone3: +18768902134 <br>
@@ -26,6 +26,8 @@
         
     </div>
 </div>
+
+<iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d15175.182342089576!2d-77.86918413455977!3d18.034687828603357!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1s123%20mainstreet%20blackriver!5e0!3m2!1sen!2sjm!4v1715694657840!5m2!1sen!2sjm" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" id="map"></iframe>
 
 <div id="homeFooter">
     <img src="/assets/images/Screenshot_13-5-2024_121716_unsplash.com.jpeg" id="instagram_img" alt="">
