--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -1,11 +1,20 @@
 
-<img src="/assets/images/doctors.jpeg" id="heroImage"  alt="">
+<img src="/assets/images/doctors.jpeg" style="width: 100%; height: 25rem;" class=".container-sm mt-5">
+
+
+<div class="container-sm mt-5" id="first_home_card">
+    <h5 style="margin-left: 2.8rem; margin-top: 2rem;"><b>We offer follow up checkups</b></h5>
+ 
+</div>
+
+<!-- 
+<img src="/assets/images/istockphoto-1682074275-170667a.webp" id="serviceImg1" alt="">
+<img src="/assets/images/istockphoto-1496720432-2048x2048.jpg" id="serviceImg2" alt=""> -->
     
-<h5 style="margin-left: 2.8rem; margin-top: 2rem;"><b>We offer follow up</b></h5>
+<!-- <h5 style="margin-left: 2.8rem; margin-top: 2rem;"><b>We offer follow up</b></h5>
 <h5 id="homeh5"><b>checkups</b></h5>
 
-<img src="/assets/images/istockphoto-1682074275-170667a.webp" id="serviceImg1" alt="">
-<img src="/assets/images/istockphoto-1496720432-2048x2048.jpg" id="serviceImg2" alt="">
+
 
 <h6 id="service1WiHealthh5"><b>Are you a patient of WiHealth?</b></h6>
 <p >
@@ -42,4 +51,4 @@
     Jamaica
 
    </p>
-</div>
+</div> -->
