--- a/src/app/pages/homepage/homepage.component.css
+++ b/src/app/pages/homepage/homepage.component.css
@@ -1,71 +1,3 @@
-#heroImage{
-    width: 15.5rem;
-    margin-top: 1.9rem;
-
-}
-
-#homeh5{
-    position: absolute;
-    top: 0;
-    margin-top: 15.8rem ;
-    margin-left: 5rem;
-   
-}
-
-#serviceImg1{
-    width: 7rem;
-    margin-left: 0.3rem;
-    margin-top: 1.4rem;
-    border-radius: 20px;
-}
-#serviceImg2{
-    width: 7rem;
-    margin-top: 1.4rem;
-    border-radius: 20px;
-    margin-left: 1rem;
-}
-#serviceImg3{
-    width: 12rem;
-    /* margin-top: 1.4rem; */
-    border-radius: 20px;
-    margin-left: 1.8rem;
-    position: absolute;
-    top: 0;
-    margin-top: 41rem;
-}
-
-#service1WiHealthh5{
-    margin-left: 0.3rem;
-}
-#service1WiHealthh6{
-    margin-left: 4.8rem;
-}
-
-p{
-  font-family: "Poetsen One", sans-serif;
-  font-weight: 400;
-  font-style: normal;     
-}
-
-#homeFooter{
-    background-color: black;
-    height: 8rem;
-    margin-top: 2rem;
-}
-
-#instagram_img{
-    border-radius: 10px;
-    width: 2rem;
-    margin-left: 5.6rem;
-    margin-top: 7px;
-}
-#facebook_img{
-    border-radius: 10px;
-    width: 2rem;
-    margin-left: 1rem;
-    margin-top: 7px;
-}
-
-#getStartedMobile{
-    margin-left: 8rem;
+#first_home_card{
+    background-color: #E7DDFF;
 }
