commit with new addition to homepage

--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -1,54 +1,31 @@
 
 <img src="/assets/images/doctors.jpeg" style="width: 100%; height: 25rem;" class=".container-sm mt-5">
+<div id="homeCard1">
 
 
-<div class="container-sm mt-5" id="first_home_card">
-    <h5 style="margin-left: 2.8rem; margin-top: 2rem;"><b>We offer follow up checkups</b></h5>
- 
+<div class="container-sm" id="container">
+    <h5 class="card-title" style="color: #BFD641;">WiHealthValues</h5><br>
+    "At WiHealth, your health is our priority.<br>
+    We ensure that our patients receive the best care and also have the feeling of being well taken care of in a community that cares about your well-being.<br>
+    The purpose of this platform is for sending appointments to the WiHealth Health practice.<br>
+    This app will help to streamline the process of helping patients of the WiHealth practice make their appointments.<br>
+    Here are some features of the app."
 </div>
 
-<!-- 
-<img src="/assets/images/istockphoto-1682074275-170667a.webp" id="serviceImg1" alt="">
-<img src="/assets/images/istockphoto-1496720432-2048x2048.jpg" id="serviceImg2" alt=""> -->
-    
-<!-- <h5 style="margin-left: 2.8rem; margin-top: 2rem;"><b>We offer follow up</b></h5>
-<h5 id="homeh5"><b>checkups</b></h5>
+<div class="container-sm" id="container2">
+   <img src="/assets/images/istockphoto-1496720432-2048x2048.jpg" id="homeServiceImage1">
+</div>
+<!-- <div class="card text-white bg-secondary mb-3 mt-5" style="max-width: 18rem; margin-left: 15rem;">
+    <div class="card-header"><b>At WiHealth your health is our priority </b></div>
+    <div class="card-body">
+      <h5 class="card-title">Dark card title</h5>
+      At WiHealth your health is our priority. We ensure that our <br>
+     patients receive the best care and also have the feeling of  <br>
+     being well takencare of being in a community that cares about  <br>
+     your welbeing.The purpose of this platform is for sending appointments <br>
+     to the Wihealth Health practice.
+    </div>
+  </div> -->
 
 
 
-<h6 id="service1WiHealthh5"><b>Are you a patient of WiHealth?</b></h6>
-<p >
-    At WiHealth your health is our priority. We ensure that our patients 
-    receive the best care and also have the feeling of being well taken
-     care of being in a community that cares about your welbeing.The purpose 
-    of this platform is for sending appointments to the Wihealth Health practice.
-</p> 
-
-
-<h5 id="service1WiHealthh6"><b>Busy Days?</b></h5>
-<img src="/assets/images/istockphoto-157423321-612x612.jpg"  id="serviceImg3"  alt="">
-<p style="margin-top: 9rem; ">
-    Too busy to remember your appointments? We will send you a
-    reminder of your appointment for the Wihealth Health practice.
-</p> <br><br>
-
-
-<h5 id="service1WiHealthh7">
-    <b>Healthcare is a journey?</b> <br>
-    <b>Let us help you on your journey.</b>
-</h5> <br><br>
-
-<button class="btn btn-primary" id="getStartedMobile">Get Started</button> <br>
-
-
-<div id="homeFooter">
-   <img src="/assets/images/Screenshot_13-5-2024_121716_unsplash.com.jpeg" id="instagram_img" alt="">
-   <img src="/assets/images/Screenshot_13-5-2024_124041_www.istockphoto.com.jpeg" id="facebook_img" alt=""> 
-
-   <p style="color: white; margin-left: 3rem;">
-    123 Main Street
-    Black River, St. Elizabeth
-    Jamaica
-
-   </p>
-</div> -->
