--- a/src/app/partials/header/header.component.html
+++ b/src/app/partials/header/header.component.html
@@ -3,6 +3,8 @@
       <a class="navbar-brand" href="#">
           <img src="assets/images/logo-search-grid-1x.png" id="logo" alt="">
       </a>
+
+      <button class="btn btn-primary ms-1">Get Started</button>
       <div class="collapse navbar-collapse" id="navToggleMenu">
           <ul class="navbar-nav me-auto nav">
               <li class="nav-item"> <a routerLink="homepage" class="nav-link">{{ 'HOME' }}</a></li>
