--- a/src/app/pages/homepage/homepage.component.css
+++ b/src/app/pages/homepage/homepage.component.css
@@ -1,3 +1,49 @@
 #first_home_card{
-    background-color: #E7DDFF;
+    background-color: #BCDAE8;
+    width: 85%;
+    border-radius: 10px;
+    height: 20rem;
+}
+
+#heading_div{
+    background-color: white;
+    margin-top: 3rem;
+}
+
+#homeCard1{
+    width: 60%;
+   
+    margin-top: 5rem;
+    border-radius: 15px;
+}
+
+#container{
+    background-color: #419CD8;
+    border-radius: 25px;
+    color: white;
+    margin-left: 0.2rem;
+    padding-left: 1.5rem;
+
+    font-family: "Oswald", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: weight;
+    font-style: normal;
+}
+
+#container2{
+    background-color: #419CD8;
+    border-radius: 17px;
+    color: white;
+    margin-top: 1rem;
+    margin-left: 21rem;
+    height: 10rem;
+
+    font-family: "Oswald", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: weight;
+    font-style: normal;
+}
+
+#homeServiceImage1{
+    height: 7rem;
 }
