my commt with completed homepage

--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -3,29 +3,48 @@
 <div id="homeCard1">
 
 
-<div class="container-sm" id="container">
-    <h5 class="card-title" style="color: #BFD641;">WiHealthValues</h5><br>
+<div class="container-md" id="container">
+  <h5 class="card-title ms-1" style="color: #BFD641; font-size: 2vw;">
+    <b style="width: 100%; font-size: 2.6em;" id="headText" >WiHealthValues</b>
+</h5>
+   <p  style="font-size: 2.5vw;">
     "At WiHealth, your health is our priority.<br>
     We ensure that our patients receive the best care and also have the feeling of being well taken care of in a community that cares about your well-being.<br>
     The purpose of this platform is for sending appointments to the WiHealth Health practice.<br>
     This app will help to streamline the process of helping patients of the WiHealth practice make their appointments.<br>
     Here are some features of the app."
+  </p>
 </div>
 
 <div class="container-sm" id="container2">
-   <img src="/assets/images/istockphoto-1496720432-2048x2048.jpg" id="homeServiceImage1">
-</div>
-<!-- <div class="card text-white bg-secondary mb-3 mt-5" style="max-width: 18rem; margin-left: 15rem;">
-    <div class="card-header"><b>At WiHealth your health is our priority </b></div>
-    <div class="card-body">
-      <h5 class="card-title">Dark card title</h5>
-      At WiHealth your health is our priority. We ensure that our <br>
-     patients receive the best care and also have the feeling of  <br>
-     being well takencare of being in a community that cares about  <br>
-     your welbeing.The purpose of this platform is for sending appointments <br>
-     to the Wihealth Health practice.
-    </div>
-  </div> -->
+  <img src="/assets/images/istockphoto-1496720432-2048x2048.jpg" id="homeServiceImage1">
+  <p style="font-size: 2.65vw;"> <!-- Adjust the font size as needed -->
+    "We handle appointments for the WiHealthPractice."
+  </p>
+</div>  
+
+<div class="container-sm" id="container2">
+  <img src="/assets/images/istockphoto-1682074275-170667a.webp" id="homeServiceImage1">
+  <p style="font-size: 2.65vw;"> <!-- Adjust the font size as needed -->
+    "We handle appointment rescheduling for WiHealthPractice."
+  </p>
+</div>  
+
+<div class="container-sm" id="container2">
+  <img src="/assets/images/istockphoto-1474842223-170667a.webp" id="homeServiceImage1">
+  <p style="font-size: 2.65vw;"> <!-- Adjust the font size as needed -->
+    "We handle appointment reminders for WiHealthPractice."
+  </p>
+</div>  
+
+<div class="container-sm" id="container2">
+  <img src="/assets/images/istockphoto-1492726899-170667a.webp" id="homeServiceImage1">
+  <p style="font-size: 2.65vw;"> <!-- Adjust the font size as needed -->
+    "We handle appointment feedbacks for WiHealthPractice ."
+  </p>
+</div>  
+
+
 
 
 
