--- a/src/app/pages/homepage/homepage.component.css
+++ b/src/app/pages/homepage/homepage.component.css
@@ -21,8 +21,8 @@
     background-color: #419CD8;
     border-radius: 25px;
     color: white;
-    margin-left: 0.2rem;
-    padding-left: 1.5rem;
+    margin-left: 45%;
+    width: 80%;
 
     font-family: "Oswald", sans-serif;
     font-optical-sizing: auto;
@@ -35,9 +35,9 @@
     border-radius: 17px;
     color: white;
     margin-top: 1rem;
-    margin-left: 21rem;
+    margin-left: 45%;
     height: 10rem;
-
+    width: 80%;
     font-family: "Oswald", sans-serif;
     font-optical-sizing: auto;
     font-weight: weight;
@@ -45,5 +45,49 @@
 }
 
 #homeServiceImage1{
-    height: 7rem;
+    height: 8rem;
+    width: 50%;
+    margin-top: 1rem;
+    border-radius: 15px;
+}
+
+#headText{
+    
+        font-family: "Sedan SC", serif;
+        font-weight: 400;
+        font-style: normal;
+      
+}
+
+#container2 {
+    display: flex;
+    align-items: center;
+}
+
+#homeServiceImage1 {
+    flex: 0 0 auto;
+    margin-right: 10px;
+}
+
+p {
+    flex: 1;
+}
+
+
+#footsection{
+    background-color: black;
+    color: white;
+    width: 100%;
+    text-align: center;
+    padding: 20px;
+  }
+
+#instagram_icon{
+    height: 3rem;
+    border-radius: 15px;
+    
+}
+
+#footsection{
+  background-color: black;
 }
