changes to the about page

--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -1,1 +1,19 @@
-<img src="/assets/images/premium_photo-1661766708050-a164431ffdf5.avif" alt="">
+<div>
+    <img src="/assets/images/premium_photo-1661766708050-a164431ffdf5.avif" id="aboutpageHero">
+</div>
+
+<h1 id="about-h1" class="mt-3">About WiHealth Practice</h1>
+
+
+<div id="aboutCard1" style="display: flex; align-items: center;"> 
+    <img src="/assets/images/istockphoto-1492726899-170667a.webp" id="about-card1Img" style="max-width: 100%; height: 16rem; ">
+    <div>
+        <div id="aboutCardHeading1" ><b>Wi health Mission statement</b></div>
+        <p style="padding-left: 2rem;">
+            At WiHealth Practice, our vision is to become the trusted healthcare provider renowned for delivering compassionate, comprehensive, and personalized medical services. We aspire to pioneer innovative approaches to healthcare delivery, leveraging cutting-edge technologies and evidence-based practices to enhance the well-being of our community. Our commitment lies in fostering a culture of excellence, where patient-centric care, continuous learning, and collaboration define our pursuit of optimal health outcomes. With a focus on integrity, empathy, and accessibility, we aim to empower individuals to lead healthier and happier lives.
+        </p>
+    </div>
+</div>
+
+
+ 
