--- a/src/app/partials/footer/footer.component.html
+++ b/src/app/partials/footer/footer.component.html
@@ -2,7 +2,7 @@
      <img src="/assets/images/Screenshot_13-5-2024_121716_unsplash.com.jpeg" id="instagram_icon" alt="">
      <img src="/assets/images/istockphoto-839499740-170667a.webp" id="facebook_icon" alt="">
 
-    <p style="color: white; margin-left: 19rem; margin-top: 1rem;">
+    <p style="color: white; margin-left: 35%; margin-top: 1rem;">
      123 Main Street
      Black River, St. Elizabeth
      Jamaica
