--- a/src/app/pages/about-us/about-us.component.css
+++ b/src/app/pages/about-us/about-us.component.css
@@ -2,6 +2,7 @@
     width: 100%;
 }
 
+
 #container1H1{
     background-color: #419CD8;
     width: 100%;
@@ -13,6 +14,16 @@
     border-radius: 15px;
 }
 
+#container{
+    background-color: #419CD8;
+    width: 100%;
+    margin-left: 4%;
+    color: white;
+    padding-top: 0;
+    /* padding-left: 10%; */
+    height: 30rem ;
+    border-radius: 15px;
+}
 .container1{
     border-radius: 18px;   
    
