--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -5,7 +5,7 @@
 <h1 id="about-h1" class="mt-3">About WiHealth Practice</h1>
 
 
-<div id="aboutCard1" style="display: flex; align-items: center;"> 
+<div id="container" style="display: flex; padding-top: 2%;"> 
     <img src="/assets/images/istockphoto-1492726899-170667a.webp" id="about-card1Img" style="max-width: 100%; height: 16rem; ">
     <div>
         <div id="aboutCardHeading1" ><b>Wi health Mission statement</b></div>
@@ -15,7 +15,7 @@
     </div>
 </div> <br>
 
-<div id="aboutCard1" style="display: flex; align-items: flex-start; justify-content: flex-start;"> 
+<div id="aboutCard1" style="display: flex; align-items: flex-start; justify-content: flex-start; padding-top: 2%;"> 
     <img src="/assets/images/istockphoto-1492726899-170667a.webp" id="about-card1Img" style="max-width: 100%; height: 16rem; padding-top: 3%; border-radius: 25px; ">
     <div>
         <div id="aboutCardHeading1" ><b> MOTTO </b></div>
@@ -25,7 +25,7 @@
     </div>
 </div> <br>
 
-<div id="aboutCard1" style="display: flex; align-items: flex-start; justify-content: flex-start;"> 
+<div id="aboutCard1" style="display: flex; align-items: flex-start; justify-content: flex-start; padding-top: 2%;"> 
     <img src="/assets/images/istockphoto-1492726899-170667a.webp" id="about-card1Img" style="max-width: 100%; height: 16rem; padding-top: 3%; border-radius: 25px; ">
     <div>
         <div id="aboutCardHeading1" ><b>About WiHealth  </b></div>
