--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -2,7 +2,7 @@
 
 <h5 id="contactPageH51">Where are we located?  </h5>
 
-<div class="container">
+<div id="container">
     <div class="contact-info">
         <b>WiHealth is located at:</b> <br>
         123 Main Street <br>
@@ -14,7 +14,7 @@
 
 <h5 id="contactPageH51">How can you reach us?</h5>
 
-<div class="container">
+<div id="container">
     <div class="contact-info">
      <b > WiHealth can be contacted at: </b><br>
         Phone1: +18768485063 <br>
@@ -27,16 +27,5 @@
     </div>
 </div>
 
-<iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d15175.182342089576!2d-77.86918413455977!3d18.034687828603357!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1s123%20mainstreet%20blackriver!5e0!3m2!1sen!2sjm!4v1715694657840!5m2!1sen!2sjm" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" id="map"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d15175.182342089576!2d-77.86918413455977!3d18.034687828603357!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1s123%20mainstreet%20blackriver!5e0!3m2!1sen!2sjm!4v1715694657840!5m2!1sen!2sjm" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" id="map" class="mt-5"></iframe>
 
-<div id="homeFooter">
-    <img src="/assets/images/Screenshot_13-5-2024_121716_unsplash.com.jpeg" id="instagram_img" alt="">
-    <img src="/assets/images/Screenshot_13-5-2024_124041_www.istockphoto.com.jpeg" id="facebook_img" alt=""> 
- 
-    <p style="color: white; margin-left: 3rem;">
-     123 Main Street
-     Black River, St. Elizabeth
-     Jamaica
- 
-    </p>
- </div>
