--- a/src/app/partials/header/header.component.html
+++ b/src/app/partials/header/header.component.html
@@ -10,9 +10,10 @@
               <li class="nav-item"> <a routerLink="homepage" class="nav-link">{{ 'HOME' }}</a></li>
               <li class="nav-item"><a routerLink="about-us" class="nav-link ml-2">{{ 'ABOUT' }}</a></li>
               <li class="nav-item"><a routerLink="contact" class="nav-link ml-2">{{ 'CONTACT' }}</a></li>
+              <li class="nav-item"><a routerLink="add-appointment" class="nav-link ml-2">{{ 'APPOINTMENT INPUTS' }}</a></li>
           </ul>
       </div>
-      <button class="btn btn-secondary btn-sm ml-2 navbar-toggle collapsed" id="hamburger-btn"
+      <button class="btn btn-secondary btn-sm ml-1 navbar-toggle collapsed" id="hamburger-btn"
           type="button" data-bs-toggle="collapse" aria-expanded="false" data-bs-target="#navToggleMenu">
           <i class="fa-solid fa-bars"></i>
       </button>
