--- a/src/app/pages/about-us/about-us.component.css
+++ b/src/app/pages/about-us/about-us.component.css
@@ -12,6 +12,8 @@
     /* padding-left: 10%; */
     height: 30rem ;
     border-radius: 15px;
+    box-shadow: 0px 0px 35px rgba(0, 0, 0, 0.5)
+  
 }
 
 #container{
@@ -21,8 +23,9 @@
     color: white;
     padding-top: 0;
     /* padding-left: 10%; */
-    height: 30rem ;
+    height: 22rem ;
     border-radius: 15px;
+    box-shadow: 0px 0px 35px rgba(0, 0, 0, 0.5)
 }
 .container1{
     border-radius: 18px;   
@@ -37,7 +40,7 @@
 }
 
 #about-h1{
-    margin-left: 30%;
+    margin-left: 36%;
     font-family: "Sedan SC", serif;
     font-weight: 400;
     font-style: normal
@@ -45,12 +48,13 @@
 }
 
 #aboutCard1{
-    margin-left: 4%;
+  
     background-color:#419CD8;
     color: white;
     height: 22rem;
-    width: 75%;
+    width: 100%;
     border-radius: 25px;
-    margin-left: 14%;
+    margin-left: 4%;
+    box-shadow: 0px 0px 35px rgba(0, 0, 0, 0.5)
 }
 
