--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -5,31 +5,22 @@
 <h1 id="about-h1" class="mt-3">About WiHealth Practice</h1>
 
 
-<div id="container" style="display: flex; padding-top: 2%;"> 
+<div id="container" style="display: flex; padding-top: 1%; overflow: scroll;"> 
     <img src="/assets/images/istockphoto-1492726899-170667a.webp" id="about-card1Img" style="max-width: 100%; height: 16rem; ">
     <div>
         <div id="aboutCardHeading1" ><b>Wi health Mission statement</b></div>
-        <p style="padding-left: 2rem;">
+        <p style="padding-left: 2rem; font-size: 3vh;">
             At WiHealth Practice, our vision is to become the trusted healthcare provider renowned for delivering compassionate, comprehensive, and personalized medical services. We aspire to pioneer innovative approaches to healthcare delivery, leveraging cutting-edge technologies and evidence-based practices to enhance the well-being of our community. Our commitment lies in fostering a culture of excellence, where patient-centric care, continuous learning, and collaboration define our pursuit of optimal health outcomes. With a focus on integrity, empathy, and accessibility, we aim to empower individuals to lead healthier and happier lives.
         </p>
     </div>
 </div> <br>
+<!--  -->
 
-<div id="aboutCard1" style="display: flex; align-items: flex-start; justify-content: flex-start; padding-top: 2%;"> 
-    <img src="/assets/images/istockphoto-1492726899-170667a.webp" id="about-card1Img" style="max-width: 100%; height: 16rem; padding-top: 3%; border-radius: 25px; ">
-    <div>
-        <div id="aboutCardHeading1" ><b> MOTTO </b></div>
-        <p style="padding-left: 2rem;   font-size: medium;">
-            Your health  is our priority
-        </p>
-    </div>
-</div> <br>
-
-<div id="aboutCard1" style="display: flex; align-items: flex-start; justify-content: flex-start; padding-top: 2%;"> 
+<div id="aboutCard1" style="display: flex; align-items: flex-start; justify-content: flex-start; overflow: scroll;"> 
     <img src="/assets/images/istockphoto-1492726899-170667a.webp" id="about-card1Img" style="max-width: 100%; height: 16rem; padding-top: 3%; border-radius: 25px; ">
     <div>
         <div id="aboutCardHeading1" ><b>About WiHealth  </b></div>
-        <p style="padding-left: 2rem;   font-size: medium;">
+        <p style="padding-left: 2rem;   font-size: 3vh;">
             WiHealth is a healthcare provider renowned for delivering compassionate, 
             comprehensive, and personalized medical services. We aspire to pioneer innovative 
              approaches to healthcare delivery, leveraging cutting-edge technologies and evidence 
