--- a/src/app/pages/homepage/homepage.component.css
+++ b/src/app/pages/homepage/homepage.component.css
@@ -28,6 +28,7 @@
     font-optical-sizing: auto;
     font-weight: weight;
     font-style: normal;
+    box-shadow: 0px 0px 35px rgba(0, 0, 0, 0.5)
 }
 
 #container2{
@@ -42,6 +43,7 @@
     font-optical-sizing: auto;
     font-weight: weight;
     font-style: normal;
+    box-shadow: 0px 0px 35px rgba(0, 0, 0, 0.5)
 }
 
 #homeServiceImage1{
