--- a/src/app/partials/header/header.component.html
+++ b/src/app/partials/header/header.component.html
@@ -11,7 +11,7 @@
           <li class="nav-item"> <a routerLink="homepage" class="nav-link">{{ 'HOME' }}</a></li>
           <li class="nav-item"><a routerLink="about-us" class="nav-link ml-2">{{ 'ABOUT' }}</a></li>
           <li class="nav-item"><a routerLink="contact" class="nav-link ml-2">{{ 'CONTACT' }}</a></li>
-          <li class="nav-item"><a routerLink="add-appointment" class="nav-link ml-2">{{ 'APPOINTMENT INPUTS' }}</a></li>
+          <li class="nav-item"><a routerLink="add-appointment" class="nav-link ml-2">{{ 'MAKE APPOINTMENT' }}</a></li>
           <li class="nav-item"><a routerLink="appointment-list" class="nav-link ml-2">{{ 'APPOINTMENT LIST' }}</a></li>
 
          
