--- a/src/app/pages/appointment-list/appointment-list.component.css
+++ b/src/app/pages/appointment-list/appointment-list.component.css
@@ -2,3 +2,24 @@
     width: 85%;
     margin-top: 10rem;
 }
+
+#head {
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400; 
+    font-style: normal; 
+}
+
+.head {
+    padding: 10px; 
+  }
+  
+  .nowrap {
+    white-space: nowrap;
+  }
+  
+  .action-buttons {
+    display: flex;
+    gap: 10px; 
+  }
+  
