commit with first input on doctors page

--- a/src/app/partials/header/header.component.html
+++ b/src/app/partials/header/header.component.html
@@ -13,6 +13,7 @@
           <li class="nav-item"><a routerLink="contact" class="nav-link ml-2">{{ 'CONTACT' }}</a></li>
           <li class="nav-item"><a routerLink="add-appointment" class="nav-link ml-2">{{ 'MAKE APPOINTMENT' }}</a></li>
           <li class="nav-item"><a routerLink="appointment-list" class="nav-link ml-2">{{ 'APPOINTMENT LIST' }}</a></li>
+          <li class="nav-item"><a routerLink="doctors-page" class="nav-link ml-2">{{ 'DOCTORS LIST' }}</a></li>
           <!-- <li class="nav-item"><a routerLink="edit-page/id" class="nav-link ml-2">{{ 'EDIT PAGE' }}</a></li> -->
 
          
